--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,10 @@
+0.1.1
+-------------------------------
+
+- supervisorclusterctl returns the return code of the ansible call now
+- Added new unit tests and fixed the setup.py
+
 0.1.0
 -------------------------------
 
-Initial release.
+- Initial release.
